# moderation_system

./: Makefile  README.md  pyproject.toml
content_moderation_system/: __init__.py  config.py  dataset.py  features.py  plots.py
content_moderation_system/modeling/: architecture.py  encoder.py  predict.py  quantize.py  torch_dataset.py  train.py  tune.py  utils.py
docs/: mkdocs.yml
docs/docs/: index.md
models/onnx_base/: model.onnx
models/quantized_encoder/: config.json  model_quantized.onnx
notebooks/: mjk_tier1.ipynb  mjk_tier2.ipynb
tests/: test_data.py
