[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "content_moderation_system"
version = "0.0.1"
description = "Filtering hateful and offensive speech and images"
authors = [
  { name = "Minjun Kim" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["content_moderation_system"]
include = ["pyproject.toml", "content_moderation_system/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["content_moderation_system"]
force-sort-within-sections = true

